[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="OptionsMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 204.0
margin_right = 637.0
margin_bottom = 396.0

[node name="MusicSliderLabel2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 14.0
text = "Master Slider"

[node name="MasterSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 34.0
rect_min_size = Vector2( 250, 15 )
min_value = -80.0
max_value = 5.0
step = 5.0

[node name="VSeparator2" type="VSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 250.0
margin_bottom = 63.0
rect_min_size = Vector2( 0, 25 )
custom_styles/separator = SubResource( 1 )

[node name="MusicSliderLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 250.0
margin_bottom = 81.0
text = "Music Slider"

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 250.0
margin_bottom = 101.0
rect_min_size = Vector2( 250, 15 )
min_value = -80.0
max_value = 5.0
step = 5.0

[node name="VSeparator" type="VSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 250.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 25 )
custom_styles/separator = SubResource( 1 )

[node name="SFXSliderLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 250.0
margin_bottom = 148.0
text = "SFX Slider"

[node name="SFXSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 250.0
margin_bottom = 168.0
min_value = -80.0
max_value = 5.0
step = 5.0

[node name="CloseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 250.0
margin_bottom = 192.0
text = "Close"

[connection signal="value_changed" from="CenterContainer/VBoxContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
